# Git-C

./: .gitignore  CMakeLists.txt  README.md
src/: constants.h  main.c
src/commands/: commands.c  commands.h
src/utils/compression/: compression.c  compression.h
src/utils/directory/: directory.c  directory.h
src/utils/file/: file.c  file.h
src/utils/string/: string.c  string.h
